--- a/themes/project_name/scss/foundation/_app-style.scss
+++ b/themes/project_name/scss/foundation/_app-style.scss
@@ -1,8 +1,8 @@
 /*  
 ================================================
-Custom Foundation4 Build by RJ Lewis
+Custom Foundation4 Build by Jack & Jean Studios
 Last updated on $date
-BG Pattern(diagonal_striped_brick) 
+BG Pattern(*****pattern name****) 
   Courtesy of: subtlepatterns.com
 ================================================
 Contents:
@@ -29,42 +29,87 @@ Contents:
 */
 /* @group 1st Things First */
   // Imports
-    // @import font url;
+    // @import url
 /* @end 1st Things First */
 
 /* @group Basic Styles */
   //Global Defaults
-    // a:hover {
-    //   text-decoration: none;
-    // }
-    // ul.right li a {
-    //   text-decoration: none;
-    // }
+    a {
+      -webkit-transition: all 300ms linear;
+      -moz-transition: all 300ms linear;
+      -o-transition: all 300ms linear;
+      -ms-transition: all 300ms linear;
+      transition: all 300ms linear;
+      &:hover {
+        text-decoration: none;
+      }
+    }
+    ul.right li a {
+      text-decoration: none;
+    }
   /* @group Special Classes */
     //Edit Bar
-
+     
     //Edit Mode
-
-    //Global
-    // .bullet {
-    //   color: #5991d3;
-    //   &:after {
-    //     content: ' ◉ ';
-    //   }
-    // }
-    // .dropcap {
-    //   font-family: 'Arimo', sans-serif;
-    //   font-weight: bold;
-    //   font-size: 1.3em;
-    //   letter-spacing: 0.065em;
-    //   color: $primary-color;
-    // }
-    // .strong-body {
-    //   font-family: 'Arimo', "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
-    // }
+    .jnj.editmode{
+      .ccm-add-block {
+        line-height: 2em !important;
+      }
+    }
+    
+    //global - some of these styles will be moved to typography.scss
+    .bullet {
+      &:before {
+        content: '\25a3  ';
+        color: $primary-color;
+      }
+    }
+    .dropcap {
+      font-family: 'Arimo', sans-serif;
+      font-weight: bold;
+      font-size: 1.3em;
+      letter-spacing: 0.065em;
+      color: $primary-color;
+    }
+    .strong-body {
+      font-family: 'Lato', "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+      font-weight: 700;
+    }
+    .small.subheader {
+      font-size: .975em;
+    }
   /* @end Special Classes */
   /* @group Base CSS */
+    //Background
+      .jnj {
+
+        }
+    //Foreground
+      // .jnj {
+        // .full ul:not(.ccm-tag-list), .main ul:not(.ccm-tag-list), .sidebar ul:not(.ccm-tag-list) {
+        //   list-style-type: none;
+        //   li:before {
+        //     content: '\25a3  ';
+        //     color: $primary-color;
+        //   }
+        // }
+        // .ccm-tags-display ul.ccm-tag-list li { //use this to edit tag clouds
+        //   display: block !important;
+        //   float: none;
+        //   line-height: 1em;
+        //   height: 1.2em;
+        //   padding: 5px 8px 6px 5px;
+        // }
+      // }
 
   /* @end Base CSCS */
-  
 /* @end Basic Styles */
+/* @group Media Queries */
+  /* @group Medium-Large Layout */
+    @media #{$small} {
+      .jnj {
+        
+      }
+    }
+  /* @end Medium-Large Layout */
+/* @end Media Queries */
