updated mixture project file(s)

--- a/themes/project_name/scss/foundation/_app-style.scss
+++ b/themes/project_name/scss/foundation/_app-style.scss
@@ -27,9 +27,13 @@ Contents:
         - Footer
 ================================================
 */
+
+
 /* @group 1st Things First */
   // Imports
-    // @import url
+
+  // Placeholders
+  
 /* @end 1st Things First */
 
 /* @group Basic Styles */
@@ -108,7 +112,7 @@ Contents:
   /* @group Medium-Large Layout */
     @media #{$small} {
       .jnj {
-        
+
       }
     }
   /* @end Medium-Large Layout */
